@@ -208,6 +208,21 @@ name|common
 operator|.
 name|params
 operator|.
+name|CollectionParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|CommonAdminParams
 import|;
 end_import
@@ -376,6 +391,32 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|security
+operator|.
+name|AuthorizationContext
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|security
+operator|.
+name|PermissionNameProvider
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|DefaultSolrThreadFactory
@@ -444,6 +485,40 @@ operator|.
 name|STATUS
 import|;
 end_import
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|security
+operator|.
+name|PermissionNameProvider
+operator|.
+name|Name
+operator|.
+name|CORE_EDIT_PERM
+import|;
+end_import
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|security
+operator|.
+name|PermissionNameProvider
+operator|.
+name|Name
+operator|.
+name|CORE_READ_PERM
+import|;
+end_import
 begin_comment
 comment|/**  *  * @since solr 1.3  */
 end_comment
@@ -454,6 +529,8 @@ class|class
 name|CoreAdminHandler
 extends|extends
 name|RequestHandlerBase
+implements|implements
+name|PermissionNameProvider
 block|{
 DECL|field|log
 specifier|private
@@ -1684,6 +1761,74 @@ parameter_list|()
 block|{
 return|return
 literal|"Manage Multiple Solr Cores"
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getPermissionName
+specifier|public
+name|Name
+name|getPermissionName
+parameter_list|(
+name|AuthorizationContext
+name|ctx
+parameter_list|)
+block|{
+name|String
+name|action
+init|=
+name|ctx
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|ACTION
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|action
+operator|==
+literal|null
+condition|)
+return|return
+name|CORE_READ_PERM
+return|;
+name|CoreAdminParams
+operator|.
+name|CoreAdminAction
+name|coreAction
+init|=
+name|CoreAdminParams
+operator|.
+name|CoreAdminAction
+operator|.
+name|get
+argument_list|(
+name|action
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|coreAction
+operator|==
+literal|null
+condition|)
+return|return
+name|CORE_READ_PERM
+return|;
+return|return
+name|coreAction
+operator|.
+name|isRead
+condition|?
+name|CORE_READ_PERM
+else|:
+name|CORE_EDIT_PERM
 return|;
 block|}
 comment|/**    * Helper class to manage the tasks to be tracked.    * This contains the taskId, request and the response (if available).    */
