@@ -228,6 +228,21 @@ name|solr
 operator|.
 name|handler
 operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
 name|component
 operator|.
 name|SearchHandler
@@ -1126,6 +1141,312 @@ argument_list|,
 name|STATUS_OK
 argument_list|,
 name|rules
+argument_list|)
+expr_stmt|;
+name|rules
+operator|=
+operator|(
+name|Map
+operator|)
+name|Utils
+operator|.
+name|fromJSONString
+argument_list|(
+name|permissions
+argument_list|)
+expr_stmt|;
+operator|(
+operator|(
+name|List
+operator|)
+name|rules
+operator|.
+name|get
+argument_list|(
+literal|"permissions"
+argument_list|)
+operator|)
+operator|.
+name|add
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"name"
+argument_list|,
+literal|"core-admin-edit"
+argument_list|,
+literal|"role"
+argument_list|,
+literal|"su"
+argument_list|)
+argument_list|)
+expr_stmt|;
+operator|(
+operator|(
+name|List
+operator|)
+name|rules
+operator|.
+name|get
+argument_list|(
+literal|"permissions"
+argument_list|)
+operator|)
+operator|.
+name|add
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"name"
+argument_list|,
+literal|"core-admin-read"
+argument_list|,
+literal|"role"
+argument_list|,
+literal|"user"
+argument_list|)
+argument_list|)
+expr_stmt|;
+operator|(
+operator|(
+name|Map
+operator|)
+name|rules
+operator|.
+name|get
+argument_list|(
+literal|"user-role"
+argument_list|)
+operator|)
+operator|.
+name|put
+argument_list|(
+literal|"cio"
+argument_list|,
+literal|"su"
+argument_list|)
+expr_stmt|;
+operator|(
+operator|(
+name|List
+operator|)
+name|rules
+operator|.
+name|get
+argument_list|(
+literal|"permissions"
+argument_list|)
+operator|)
+operator|.
+name|add
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"name"
+argument_list|,
+literal|"all"
+argument_list|,
+literal|"role"
+argument_list|,
+literal|"su"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|permissions
+operator|=
+name|Utils
+operator|.
+name|toJSONString
+argument_list|(
+name|rules
+argument_list|)
+expr_stmt|;
+name|checkRules
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"resource"
+argument_list|,
+literal|"/admin/cores"
+argument_list|,
+literal|"userPrincipal"
+argument_list|,
+literal|null
+argument_list|,
+literal|"requestType"
+argument_list|,
+name|RequestType
+operator|.
+name|ADMIN
+argument_list|,
+literal|"collectionRequests"
+argument_list|,
+literal|null
+argument_list|,
+literal|"handler"
+argument_list|,
+operator|new
+name|CoreAdminHandler
+argument_list|(
+literal|null
+argument_list|)
+argument_list|,
+literal|"params"
+argument_list|,
+operator|new
+name|MapSolrParams
+argument_list|(
+name|singletonMap
+argument_list|(
+literal|"action"
+argument_list|,
+literal|"CREATE"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|PROMPT_FOR_CREDENTIALS
+argument_list|)
+expr_stmt|;
+name|checkRules
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"resource"
+argument_list|,
+literal|"/admin/cores"
+argument_list|,
+literal|"userPrincipal"
+argument_list|,
+literal|"joe"
+argument_list|,
+literal|"requestType"
+argument_list|,
+name|RequestType
+operator|.
+name|ADMIN
+argument_list|,
+literal|"collectionRequests"
+argument_list|,
+literal|null
+argument_list|,
+literal|"handler"
+argument_list|,
+operator|new
+name|CoreAdminHandler
+argument_list|(
+literal|null
+argument_list|)
+argument_list|,
+literal|"params"
+argument_list|,
+operator|new
+name|MapSolrParams
+argument_list|(
+name|singletonMap
+argument_list|(
+literal|"action"
+argument_list|,
+literal|"CREATE"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|FORBIDDEN
+argument_list|)
+expr_stmt|;
+name|checkRules
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"resource"
+argument_list|,
+literal|"/admin/cores"
+argument_list|,
+literal|"userPrincipal"
+argument_list|,
+literal|"joe"
+argument_list|,
+literal|"requestType"
+argument_list|,
+name|RequestType
+operator|.
+name|ADMIN
+argument_list|,
+literal|"collectionRequests"
+argument_list|,
+literal|null
+argument_list|,
+literal|"handler"
+argument_list|,
+operator|new
+name|CoreAdminHandler
+argument_list|(
+literal|null
+argument_list|)
+argument_list|,
+literal|"params"
+argument_list|,
+operator|new
+name|MapSolrParams
+argument_list|(
+name|singletonMap
+argument_list|(
+literal|"action"
+argument_list|,
+literal|"STATUS"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|STATUS_OK
+argument_list|)
+expr_stmt|;
+name|checkRules
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"resource"
+argument_list|,
+literal|"/admin/cores"
+argument_list|,
+literal|"userPrincipal"
+argument_list|,
+literal|"cio"
+argument_list|,
+literal|"requestType"
+argument_list|,
+name|RequestType
+operator|.
+name|ADMIN
+argument_list|,
+literal|"collectionRequests"
+argument_list|,
+literal|null
+argument_list|,
+literal|"handler"
+argument_list|,
+operator|new
+name|CoreAdminHandler
+argument_list|(
+literal|null
+argument_list|)
+argument_list|,
+literal|"params"
+argument_list|,
+operator|new
+name|MapSolrParams
+argument_list|(
+name|singletonMap
+argument_list|(
+literal|"action"
+argument_list|,
+literal|"CREATE"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|STATUS_OK
 argument_list|)
 expr_stmt|;
 block|}
